# Opencv-android-ndk

./: .gitignore  README.md
getting-started/: build.gradle  opencvtest.sublime-workspace  settings.gradle
getting-started/app/: build.gradle
getting-started/app/src/main/: AndroidManifest.xml
getting-started/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
getting-started/app/src/main/cpp/include/: com_example_opencvtest_NativeLibrary.h
getting-started/app/src/main/java/com/example/opencvtest/: MainActivity.java  NativeLibrary.java
